# silencio2

./: .gitignore  README.md  app.py  default_policy.txt  main.py  pyproject.toml
src/silencio2/: __init__.py  automaton.py  badges.py  cli.py  formatspec.md  mdseg.py  models.py  patterns.py  redact.py  store.py  unredact.py
src/silencio2/llm/: __init__.py  autoredact_core.py  engine.py
src/silencio2/tests/: conftest.py  test_automaton.py  test_badges.py  test_mdseg.py  test_models.py  test_redact.py  test_unredact.py
