[project]
name = "silencio2"
version = "0.1.0"
description = "Non-bad text redactor: badge-driven inventory + Aho-Corasick basded fast 'n sober redaction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyahocorasick>=2.2.0",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
silencio2 = "silencio2.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
